update api spec, add get by id, DTO->entity dependency
